new walk thru, updated styling, minor content edits

--- a/Negotiation3/reports/compare.html
+++ b/Negotiation3/reports/compare.html
@@ -108,10 +108,10 @@
 		<div align="center">
 	        <img src="image-3.png" width="100px" height="100px" class="img-circle">
 		</div>
-		<p>Here's how your responses compare with others have taken this test:</p> 
+		<p style="font-size: 14px;">Here's how your responses compare with others have taken this test:</p> 
 	<div>
 		
-	<div style="font-size: 13px">
+	<div style="font-size: 14px">
 		<table class="table table-bordered">
 			<thead>
 				<tr>
@@ -147,20 +147,24 @@
 	</section>
 
 	<section class="card">
-		<p>Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperforming when it comes to results.</p> 
+		<p style="font-size: 14px;">Those are simply averages, of course. There's a lot of variation from one person to another. But note that people tend to be most confident about their ability to understand the needs and feelings of other people. By contrast, many worry about underperforming when it comes to results.</p> 
 	</section>
 		
 	<section class="card">
-		<p>There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)</p>
-		<p>In your experience, do you think other negotiators accurately assess their strengths and weaknesses? For example:</p> 
+		<p style="font-size: 14px;">There is nothing basically good or bad if your scores match those averages. (Relatively few people have an exact match.)</p>
+		<p style="font-size: 14px;">In your experience, do you think other negotiators accurately assess their strengths and weaknesses?</p>
+	</section>
+		
+	<section class="card">
+		<p style="font-size: 14px;"><strong>For example:</strong></p> 
 
-		<ul style="margin: 10px 0px 10px -20px;">
+		<ul style="margin: 10px 0px 10px -20px;font-size: 14px">
 			<li>Do most people you deal with actually get inferior results?</li>
 			<li>Do most negotiators you know really excel at understanding others?</li>
 		</ul>
 	</section>
 	<section class="card">
-		<p><strong>Perhaps not.</strong> The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
+		<p style="font-size: 14px;"><strong>Perhaps not.</strong> The fact is that our self-perceptions do not always match reality. Even so, those beliefs still influence behavior, especially when it comes to interacting with others. </p> 
 	</section>
 	
 	<section class="card">
@@ -169,7 +173,7 @@
 				<span data-icon="&#xe030;" style="font-size: 32px; color:#ff9f33"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				<p>You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap <strong>Next</strong> to see how these four essential skills are connected to one another.</p>
+				<p style="font-size: 14px;">You may want to adjust the ratings you just gave yourself. That's fine. You can do the test over again. But first tap <strong>Next</strong> to see how these four essential skills are connected to one another.</p>
 			</div>
 		</div>
 	</section>
