--- a/Negotiation3/reports/practices-www.html
+++ b/Negotiation3/reports/practices-www.html
@@ -133,7 +133,7 @@
 		</div>
   	<div>
 		<h4 style="font-weight: 400; color:#ff9f33">What Worked Well?</h4>
-		<p>Negotiation 360&deg; has compiled everything you've done well in the cases recorded in the Scorecard section. Your most recent experiences appear at the top.</p>
+		<p style="font-size: 14px">Negotiation 360&deg; has compiled everything you've done well in the cases recorded in the Scorecard section. Your most recent experiences appear at the top.</p>
 	</div>
 	</section>
 		 
