--- a/Negotiation3/reports/dilemmas.html
+++ b/Negotiation3/reports/dilemmas.html
@@ -36,10 +36,10 @@
 	}
 
 	.topcard {
-	  padding:0.25rem 1rem 0.5rem 1rem;
+	  padding:0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1.5rem 1rem;
+	  margin: 1.5rem 1rem 1rem 1rem;
 	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -49,7 +49,7 @@
 	  padding:0.5rem 1rem;
 	  box-shadow:0 1px 2px #aaa;
 	  background:white;
-	  margin: 1.5rem 1rem;
+	  margin: 1rem 1rem;
 	  border-radius:1px;
 	  user-select:none;
 	  animation:fly-in-from-left .5s 1s ease both;
@@ -118,7 +118,7 @@
 	<div class="owl-carousel" style="margin: 10px 0px 0px 0px;">
  
    		<div class="owl-item">
-			<section class="card">
+			<section class="topcard">
 				<h1>Relational Dimension</h1>
 				<canvas id="canvas"></canvas>
 			</section>
@@ -129,7 +129,7 @@
 		</div>
 
 		<div class="owl-item">	
-			<section class="card">
+			<section class="topcard">
 				<h1>Outcome Dimension</h1>
 				<canvas id="canvas2"></canvas>
 			</section>
@@ -140,7 +140,7 @@
 		</div>
 
       	<div class="owl-item">
-			<section class="card">			
+			<section class="topcard">			
 				<h1>Linking Means and Ends</h1>
 				<canvas id="canvas3"></canvas>
 			</section>
@@ -152,7 +152,7 @@
       	</div>
 	
       	<div class="owl-item">
-			<section class="card">			
+			<section class="topcard">			
 				<div class="row"> 
             		<div class="col-xs-1" style="margin-right:10px">
               			<span data-icon="&#xe587;" style="font-size: 36px; color:#ff9f33"></span>
