Content edits, new pics and chartNewjs added

--- a/Negotiation3/reports/about.html
+++ b/Negotiation3/reports/about.html
@@ -119,7 +119,7 @@
 			<div align="center">
 		        <img src="user_male4-32.png" width="36px" height="36px" class="img-circle">
 			</div>
-			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also introduces you fundamental tensions in negotiation that you must address in formulating strategy.</p>
+			<p style="font-size: 14px;"><strong>Negotiation 360&deg;</strong> has three closely linked features. The <strong>Self-assessment</strong> feature prompts you to create a personalized profile reflecting your basic negotiation style. It also explains fundamental tensions in negotiation that you must address in formulating strategy.</p>
 		</section>
 
 		<section class="card">
