--- a/Negotiation3/reports/practices-intro.html
+++ b/Negotiation3/reports/practices-intro.html
@@ -120,7 +120,7 @@
 	</section>
 	
 	<section class="card">
-		<p style="font-size: 14px;">Your success, however, depends on the effort you invest into learning from your experience, in order to polish your negotiation skills. The good news is that thoughtful preparation does not take much time. Remember: you never want to be less prepared than the other negotiator at the table.</p>
+		<p style="font-size: 14px;">Enhancing your negotiation skills depends, though, on the effort you invest in discovering and applying the right lessons from your negotiation experience. The good news is that thoughtful preparation does not take much time. Remember: you never want to be less prepared than the other negotiator at the table.</p>
 	</section>
 	
 	<section class="card">
