--- a/Negotiation3/reports/practices-performance.html
+++ b/Negotiation3/reports/practices-performance.html
@@ -184,7 +184,7 @@
 				<div id="legend3">
 			</section>
 			<section class="card">
-				<p style="font-size: 13px">Research shows that negotiators with higher aspirations tend to get better results. That advantage comes with a cost, however; two costs, in fact. People with high expectations can feel disappointed even when they get a good deal. They also have a higher rate of impasse, if their aspirations are unrealistic. <strong>The takeaway: be ambitious while you are negotiating; don't brood about the outcome when you're finished.</strong></p>
+				<p style="font-size: 13px">Research shows that negotiators with higher aspirations tend to get better results. That advantage comes with a cost, however; two costs, in fact. People with high expectations can feel disappointed even when they get a good deal. They also have a higher rate of impasse, if their aspirations are unrealistic. <strong>The takeaway: be ambitious while you are negotiating; but don't brood about the outcome when you're finished.</strong></p>
 			</section>
 		</div>
 
