--- a/Negotiation3/reports/scorecard-intro.html
+++ b/Negotiation3/reports/scorecard-intro.html
@@ -107,7 +107,7 @@
 		<div align="center">
 	        <img src="image-11.png" width="100px" height="100px" class="img-circle">
 		</div>
-		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. The after-action-review won't take long, but your payoff is huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
+		<p style="font-size: 14px;">Learning the right lessons from your negotiation experience will enhance your strategic agility and polish your interpersonal skills. Your after-action-review won't take long, but the payoff will be huge. The following questions will sharpen your analysis. Address them while your impressions are still sharp.</p>
 	</section>
 	
 	<section class="card">
