--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -116,7 +116,7 @@
 	<div>
 		<section class="card">
 			<div align="center">
-		        <img src="mw.jpg" width="100px" height="100px" class="img-circle">
+		        <img src="mw.png" width="100px" height="100px" class="img-circle">
 			</div>
         	<p style="font-size:14px"><strong>Michael Wheeler</strong> is an award-winning author, professor, and adviser whose work is at the forefront of negotiation scholarship and practice. For more than twenty years at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also counsels corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
 			<div class="list-group" style="font-weight:400">
