--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -156,7 +156,7 @@
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties' needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are anxious, maybe they are feeling that, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-trigger="focus" data-placement="left" title="Bill Ury" data-content="Author of &ldquo;Getting to Yes with Yourself&rdquo; and &ldquo;Getting Past No&rdquo;" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that unfolds.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" data-toggle="modal" data-target="#myModal" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, with a broad perspective on everything that unfolds.</li>
 			</ul>
 	    </div>
 	  </div>
@@ -170,7 +170,7 @@
 	    </div>
 	    <div id="collapseTwo" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="BATNA" data-content="an acronym for &ldquo;Best Alternative to a Negotiated Agreement&rdquo;" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be when you negotiate.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" data-toggle="modal" data-target="#myModal2" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be when you negotiate.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their <strong>BATNA</strong> (their walkaway). Just because you need them doesn't mean that they don't need you just as much.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Practice</strong> in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't oversell.</strong> Research shows that people in weaker positions tend to talk too much.</li>
@@ -187,7 +187,7 @@
 	    </div>
 	    <div id="collapseThree" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <a href="javascript://" id="example3" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="Anchoring" data-content="Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable." style="color:#ff9f33">"anchored."</a> <strong>Work from your number.</strong> Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <a href="javascript://" data-toggle="modal" data-target="#myModal3" style="color:#ff9f33">"anchored."</a> <strong>Work from your number.</strong> Not theirs. Provide solid reasons for your offers and where you have to say no.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Watch the clock.</strong> If the other party is under a deadline, use that to your advantage.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a tentative agreement, suggest jointly reviewing the terms to see if further adjustments might help both parties.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> Don't waste time worrying about whether you could have gotten more. The only way to know just how far you can push is by demanding too much and risking impasse.</li>
@@ -216,16 +216,78 @@
 	<div style="height:100px">
 	</div>
 
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Bill Ury</h4>
+	      </div>
+	      <div class="modal-body" style="text-align: left; font-size:14px">
+	        Author of &ldquo;Getting to Yes&rdquo; and &ldquo;Getting Past No.&rdquo;
+	      </div>
+      	    <div class="modal-footer">
+		        <button type="button" class="btn btn-sm" style="color: #ffffff; background-color: #ff9f33; border-color: #ff9f33;" data-dismiss="modal">Got It</button>
+	  	    </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <h4 class="modal-title" id="myModalLabel">BATNA</h4>
+	      </div>
+	      <div class="modal-body" style="text-align: left; font-size:14px">
+	        An acronym for &ldquo;Best Alternative to a Negotiated Agreement.&rdquo;
+	      </div>
+            <div class="modal-footer">
+		        <button type="button" class="btn btn-sm" style="color: #ffffff; background-color: #ff9f33; border-color: #ff9f33;" data-dismiss="modal">Got It</button>
+	  	    </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	        <h4 class="modal-title" id="myModalLabel">Anchoring</h4>
+	      </div>
+	      <div class="modal-body" style="text-align: left; font-size:14px">
+			Psychological research shows that people often get unduly influenced by the first offer they hear, even if it's unreasonable.
+	      </div>
+      	    <div class="modal-footer">
+		        <button type="button" class="btn btn-sm" style="color: #ffffff; background-color: #ff9f33; border-color: #ff9f33;" data-dismiss="modal">Got It</button>
+	  	    </div>
+	    </div>
+	  </div>
+	</div>
+
     <script src="jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/collapse.js"></script>
     <script src="js/popover.js"></script>
+    <script src="js/modal.js"></script>
 	<script>
 		$(function () {
 		    $('#example1').popover();
 		    $('#example2').popover();
 		    $('#example3').popover();
 		});
+
+		$('body').on('click', function (e) {
+	    $('[data-toggle="popover"]').each(function () {
+        //the 'is' for buttons that trigger popups
+        //the 'has' for icons within a button that triggers a popup
+        if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $('.popover').has(e.target).length === 0) {
+            $(this).popover('hide');
+        }
+    });
+});
 	</script>
 </body>
 </html>
